load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

alias(
    name = "gazelle",
    actual = "//gazelle",
)

cc_binary(
    name = "exit0",
    srcs = ["exit0.c"],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "allow_configuring_tmpdir",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_per_service_reload",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "terse_svcinit_output",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

# If set, svcinit will not shutdown services when using `bazel run` on a test target.
# This will match the behavior of `bazel run` on a service or service_group.
bool_flag(
    name = "keep_services_up",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
