load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

# gazelle:prefix rules_itest
# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl

cc_binary(
    name = "exit0",
    srcs = ["exit0.c"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "exit0_test",
    srcs = [":exit0.c"],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "allow_configuring_tmpdir",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_per_service_reload",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "terse_svcinit_output",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

# If set, svcinit will not shutdown services when using `bazel run` on a test target.
# This will match the behavior of `bazel run` on a service or service_group.
bool_flag(
    name = "keep_services_up",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

# Default value for shutdown_timeout in itest_service rules.
string_flag(
    name = "shutdown_timeout",
    build_setting_default = "1s",
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enforce_graceful_shutdown",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "itest",
    srcs = ["itest.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//private:itest"],
)
