module(
    name = "rules_itest",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "1.42.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")

# TODO(zbarsky): This can't be marked dev_dependency, otherwise `examples` module won't build. Why?
bazel_dep(name = "gazelle", version = "0.34.0", repo_name = "bazel_gazelle")
