module(
    name = "rules_itest",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "platforms", version = "0.0.11")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_x_sys",
)

bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2", dev_dependency = True)

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.3.1", dev_dependency = True)
archive_override(
    module_name = "toolchains_llvm_bootstrapped",
    integrity = "sha256-es2Zf7dKYEVDuvkm6E90CnunXSisameDh5/5nyhyu2Q=",
    strip_prefix = "toolchains_llvm_bootstrapped-873b8be7d416283761b158ef4635e605970ab3db",
    urls = ["https://github.com/cerisier/toolchains_llvm_bootstrapped/archive/873b8be7d416283761b158ef4635e605970ab3db.tar.gz"],
)

register_toolchains("@toolchains_llvm_bootstrapped//toolchain:all", dev_dependency = True)

