bazel_dep(name = "rules_itest")
local_path_override(
    module_name = "rules_itest",
    path = "../",
)

bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_java", version = "9.3.0")

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.3.1")
archive_override(
    module_name = "toolchains_llvm_bootstrapped",
    integrity = "sha256-es2Zf7dKYEVDuvkm6E90CnunXSisameDh5/5nyhyu2Q=",
    strip_prefix = "toolchains_llvm_bootstrapped-873b8be7d416283761b158ef4635e605970ab3db",
    urls = ["https://github.com/cerisier/toolchains_llvm_bootstrapped/archive/873b8be7d416283761b158ef4635e605970ab3db.tar.gz"],
)

osx = use_extension("@toolchains_llvm_bootstrapped//toolchain/extension:osx.bzl", "osx")
osx.framework(name = "CoreFoundation")

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

bazel_dep(name = "gazelle", version = "0.47.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_service_dynamodb",
    "com_github_open_telemetry_opentelemetry_collector_contrib_exporter_clickhouseexporter",
    "com_github_open_telemetry_opentelemetry_collector_contrib_exporter_fileexporter",
    "com_github_open_telemetry_opentelemetry_collector_contrib_exporter_rabbitmqexporter",
    "com_github_open_telemetry_opentelemetry_collector_contrib_exporter_syslogexporter",
    "com_github_open_telemetry_opentelemetry_collector_contrib_extension_basicauthextension",
    "com_github_open_telemetry_opentelemetry_collector_contrib_processor_transformprocessor",
    "com_github_open_telemetry_opentelemetry_collector_contrib_receiver_prometheusreceiver",
    "io_opentelemetry_go_collector_component",
    "io_opentelemetry_go_collector_confmap",
    "io_opentelemetry_go_collector_confmap_provider_envprovider",
    "io_opentelemetry_go_collector_confmap_provider_fileprovider",
    "io_opentelemetry_go_collector_confmap_provider_httpprovider",
    "io_opentelemetry_go_collector_confmap_provider_httpsprovider",
    "io_opentelemetry_go_collector_confmap_provider_yamlprovider",
    "io_opentelemetry_go_collector_connector",
    "io_opentelemetry_go_collector_exporter",
    "io_opentelemetry_go_collector_extension",
    "io_opentelemetry_go_collector_otelcol",
    "io_opentelemetry_go_collector_processor",
    "io_opentelemetry_go_collector_processor_batchprocessor",
    "io_opentelemetry_go_collector_receiver",
    "io_opentelemetry_go_collector_receiver_otlpreceiver",
    "io_opentelemetry_go_collector_service",
    "org_golang_x_sys",
)

bazel_dep(name = "rules_go", version = "0.59.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.25.0",
)
use_repo(go_sdk, "go_sdk")

bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = ["com.amazonaws:DynamoDBLocal:2.0.0"],
    exclusions = [
        # rules_jvm_external doesn't really handle these properly, and even if it did,
        # there is no linux-arm64 variant. So we build this one from source instead.
        "com.almworks.sqlite4java:libsqlite4java-linux-amd64",
        "com.almworks.sqlite4java:libsqlite4java-linux-i386",
        "io.github.ganadist.sqlite4java:libsqlite4java-osx-aarch64",
        # TODO(zbarsky): Not sure why we still need this one on Mac...
        #"com.almworks.sqlite4java:libsqlite4java-osx",
        "com.almworks.sqlite4java:sqlite4java-win32-x64",
        "com.almworks.sqlite4java:sqlite4java-win32-x86",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven", "unpinned_maven")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_redis_redis",
    build_file = "//redis:BUILD.redis",
    integrity = "sha256-I65GNgUUsl+llqwrMUDMuTKCwqFv5fbYpNPoM2ENZqw=",
    strip_prefix = "redis-6.2.14",
    urls = ["https://github.com/redis/redis/archive/refs/tags/6.2.14.tar.gz"],
)

http_archive(
    name = "sqlite4java",
    build_file = "//third_party:BUILD.sqlite4java",
    integrity = "sha256-zsZtCvre6it1fzl30RBHO15j2a5fbIKCZSKS7YPgPnw=",
    strip_prefix = "sqlite4java-7b55b3eab6901a0e49d6e1129431fa92c4206c0b",
    url = "https://github.com/ganadist/sqlite4java/archive/7b55b3eab6901a0e49d6e1129431fa92c4206c0b.tar.gz",
)

[
    http_archive(
        name = "mysql_8_4_0_" + arch,
        build_file = "//mysql:BUILD.mysql",
        integrity = integrity,
        strip_prefix = "mysql-8.4.0-" + arch,
        urls = ["https://cdn.mysql.com/archives/mysql-8.4/mysql-8.4.0-" + arch + ".tar." + ext],
    )
    for (arch, integrity, ext) in [
        ("macos14-arm64", "sha256-tK10p4qkN43wDhFkyZed1mDqCb9H4F9u+DJPTqFBhhg=", "gz"),
        ("macos14-x86_64", "sha256-rbuLfiYVR3aKVI2Xk4pfG2bPhdruCdsorEu2V6p9QZI=", "gz"),
        ("linux-glibc2.28-aarch64", "sha256-9NkYaSm7JgRqO9GjuLdL0jXn7GkxjwmtchjPzABwk5s=", "xz"),
        ("linux-glibc2.28-x86_64", "sha256-N3Zm2BuB79JRDB4SeUoIiphBLt5KAfC5QRD6FUlzSuM=", "xz"),
    ]
]
