load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runner_lib",
    srcs = [
        "runner.go",
        "service_cmd.go",
        "topo_starter.go",
    ],
    importpath = "rules_itest/runner",
    visibility = ["//:__subpackages__"],
    deps = [
        "//runner/topological",
        "//svclib",
    ],
)
