load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runner",
    srcs = [
        "runner.go",
        "runner_unix.go",
        "runner_windows.go",
        "service_instance.go",
        "topo_starter.go",
    ],
    importpath = "rules_itest/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//logger",
        "//runner/topological",
        "//svclib",
    ],
)
