load("@gazelle//:def.bzl", "gazelle")
load("@rules_itest//:itest.bzl", "itest_service", "itest_service_group")

package(default_visibility = ["//visibility:public"])

gazelle(name = "gazelle")

itest_service(
    name = "_speedy_service",
    args = [
        "-port",
        "8000",
    ],
    env = {"foo": "bar"},
    exe = "//go_service",
    http_health_check_address = "http://127.0.0.1:8000",
    tags = ["manual"],
)

# Make sure a degenerate group works.
itest_service_group(
    name = "speedy_service",
    services = [":_speedy_service"],
)

itest_service(
    name = "sleepy_service",
    args = [
        "-port",
        "8001",
        "-sleep-time",
        ".75s",
        "-busy-time",
        ".75s",
    ],
    exe = "//go_service",
    http_health_check_address = "http://127.0.0.1:8001",
)

itest_service_group(
    name = "services",
    services = [
        ":sleepy_service",
        ":speedy_service",
    ],
    tags = ["manual"],
)

itest_service(
    name = "depends_on_group",
    exe = "@rules_itest//:exit0",
    deps = [
        ":speedy_service",
    ],
)

itest_service(
    name = "service_with_data",
    args = [
        "-port",
        "$${PORT}",
        "-file-to-open",
        "$(rlocationpath go.mod)",
    ],
    autoassign_port = True,
    data = [":go.mod"],
    exe = "//go_service",
    http_health_check_address = "http://127.0.0.1:$${PORT}",
)

itest_service(
    name = "autoassigned",
    args = [
        "-port",
        "$${PORT}",
    ],
    autoassign_port = True,
    exe = "//go_service",
    http_health_check_address = "http://127.0.0.1:$${PORT}",
)

itest_service(
    name = "named_port",
    args = [
        "-port",
        "$${@@//:named_port:http_port}",
    ],
    autoassign_port = True,
    exe = "//go_service",
    http_health_check_address = "http://127.0.0.1:$${@@//:named_port:http_port}",
    named_ports = ["http_port"],
)

itest_service(
    name = "autoassigned_env",
    autoassign_port = True,
    env = {
        "PORT": "$${PORT}",
    },
    exe = "//go_service",
    http_health_check_address = "http://127.0.0.1:$${PORT}",
)

itest_service(
    name = "autoassigned_env2",
    autoassign_port = True,
    env = {
        "PORT": "$${@@//:autoassigned_env2}",
    },
    exe = "//go_service",
    http_health_check_address = "http://127.0.0.1:$${PORT}",
)
