bazel_dep(name = "rules_itest")
local_path_override(
    module_name = "rules_itest",
    path = "../",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "aspect_rules_js", version = "2.8.2")
bazel_dep(name = "rules_nodejs", version = "6.6.2") # only to bump to non-broken version for bazel 9
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "platforms", version = "1.0.0")


bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.3.1")
archive_override(
    module_name = "toolchains_llvm_bootstrapped",
    integrity = "sha256-es2Zf7dKYEVDuvkm6E90CnunXSisameDh5/5nyhyu2Q=",
    strip_prefix = "toolchains_llvm_bootstrapped-873b8be7d416283761b158ef4635e605970ab3db",
    urls = ["https://github.com/cerisier/toolchains_llvm_bootstrapped/archive/873b8be7d416283761b158ef4635e605970ab3db.tar.gz"],
)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.22.3",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_x_sys",
)
