load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "get_assigned_port_lib",
    srcs = ["main.go"],
    importpath = "rules_itest/cmd/get_assigned_port",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "get_assigned_port",
    embed = [":get_assigned_port_lib"],
    visibility = ["//visibility:public"],
)
