load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "svcinit_lib",
    srcs = ["main.go"],
    importpath = "rules_itest/cmd/svcinit",
    visibility = ["//visibility:private"],
    deps = [
        "//logger",
        "//runner",
        "//svclib",
        "@rules_go//go/runfiles:go_default_library",
    ],
)

go_binary(
    name = "svcinit",
    embed = [":svcinit_lib"],
    visibility = ["//visibility:public"],
)
