load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_service_lib",
    srcs = ["main.go"],
    importpath = "rules_itest/examples/go_service",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go_service",
    embed = [":go_service_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)
